pulkitchhabra-salesforce/objects/Deal__c.object
<CustomObject>
    <description>Contains all the not converted leads and not closed opportunities.</description>
    <fields>
        <fullName>Deal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Deal Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Emails__c</fullName>
        <label>Emails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>IF( Status__c = &quot;Open - Not Contacted&quot; || Status__c=&quot;Prospecting&quot;, 0, IF(Status__c=&quot;Working - Contacted&quot; || Status__c=&quot;Qualification&quot;, 1, IF(Status__c=&quot;Needs Analysis&quot;, 2, IF(Status__c=&quot;Value Proposition&quot;, 3, IF(Status__c=&quot;Id. Decision Makers&quot;, 4, If(Status__c=&quot;Perception Analysis&quot;, 5, IF(Status__c=&quot;Proposal/Price Quote&quot;, 6, IF(Status__c=&quot;Negotiation/Review&quot;, 7, Null))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <label>Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>